removed detail shortcode and fixed nav items alignment

--- a/assets/scss/components/_code.scss
+++ b/assets/scss/components/_code.scss
@@ -62,7 +62,9 @@ pre {
     }
     &:focus, &active {
       display: block;
-      border: 1px solid $link-color;
+      box-shadow: inset 0px 0px 0px 1px $link-color;
+      color: $link-color;
+      transition: 0s;
     }
   }
 }
